@@ -62,7 +62,7 @@ from userinterface.UserIF        import submitJobs,getJobStatus,queryPandaIDs,ki
      getDisInUseForAnal,getLFNsInUseForAnal,getScriptOfflineRunning,setDebugMode,\
      insertSandboxFileInfo,checkSandboxFile,changeJobPriorities,insertTaskParams,\
      killTask,finishTask,getCmtConfigList,getJediTasksInTimeRange,getJediTaskDetails,\
-     retryTask,getRetryHistory,changeTaskPriority,reassignTask
+     retryTask,getRetryHistory,changeTaskPriority,reassignTask,changeTaskAttributePanda
 allowedMethods += ['submitJobs','getJobStatus','queryPandaIDs','killJobs','reassignJobs',
                    'getJobStatistics','getJobStatisticsPerSite','resubmitJobs','queryLastFilesInDataset','getPandaIDsSite',
                    'getJobsToBeUpdated','updateProdDBUpdateTimes','runTaskAssignment','getAssigningTask','getSiteSpecs',
@@ -77,7 +77,7 @@ allowedMethods += ['submitJobs','getJobStatus','queryPandaIDs','killJobs','reass
                    'getDisInUseForAnal','getLFNsInUseForAnal','getScriptOfflineRunning','setDebugMode',
                    'insertSandboxFileInfo','checkSandboxFile','changeJobPriorities','insertTaskParams',
                    'killTask','finishTask','getCmtConfigList','getJediTasksInTimeRange','getJediTaskDetails',
-                   'retryTask','getRetryHistory','changeTaskPriority','reassignTask']
+                   'retryTask','getRetryHistory','changeTaskPriority','reassignTask','changeTaskAttributePanda']
 
 # import error
 import taskbuffer.ErrorCode
