@@ -929,6 +929,14 @@ class UserIF:
         return ret
 
 
+    # change task attribute
+    def changeTaskAttributePanda(self,jediTaskID,attrName,attrValue):
+        # kill
+        ret = self.taskBuffer.changeTaskAttributePanda(jediTaskID,attrName,attrValue)
+        # return
+        return ret
+
+
 
 # Singleton
 userIF = UserIF()
@@ -1913,4 +1921,31 @@ def changeTaskPriority(req,jediTaskID=None,newPriority=None):
     except:
         return pickle.dumps((False,'newPriority must be an integer'))        
     ret = userIF.changeTaskPriority(jediTaskID,newPriority)
+    return pickle.dumps(ret)
+
+
+
+# change task attribute
+def changeTaskAttributePanda(req,jediTaskID,attrName,attrValue):
+    # check security
+    if not isSecure(req):
+        return pickle.dumps((False,'secure connection is required'))
+    # get DN
+    user = None
+    if req.subprocess_env.has_key('SSL_CLIENT_S_DN'):
+        user = _getDN(req)        
+    # check role
+    prodRole = _isProdRoleATLAS(req)
+    # only prod managers can use this method
+    if not prodRole:
+        return "Failed : production or pilot role required"
+    # check jediTaskID
+    try:
+        jediTaskID = long(jediTaskID)
+    except:
+        return pickle.dumps((False,'jediTaskID must be an integer'))        
+    # check attribute
+    if not attrName in ['ramCount','wallTime']:
+        return "Failed : disallowed to update {0}".format(attrName)
+    ret = userIF.changeTaskAttributePanda(jediTaskID,attrName,attrValue)
     return pickle.dumps(ret)
